# DrawingPolygon_Opengl

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/cpptask/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DelaunayTriangulation.cpp  delaunator.h  native-lib.cpp
app/src/main/java/com/example/cpptask/: MainActivity.java  MyGLRenderer.java  MyGLSurfaceView.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/cpptask/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
